--- a/practica2/Practica 2.html
+++ b/practica2/Practica 2.html
@@ -113,7 +113,7 @@
 
                             <p id="Diseño fisico">
                             <h1 class="fw-bolder2 mb-4 mt-5 fs-5">Diseño fisico</h1>
-                            <p class="fs-6 mb-4">Para las conexiones fisicas simplemente conectamos el Arduino Uno con la computadora a travez de su cable USB para que se suba el codigo y el LED de la placa se encienda como se asegura el codigo.</p>
+                            <p class="fs-6 mb-4">Para las fisicas simplemente conectamos el Arduino Uno con la computadora a travez de su cable USB para que se suba el codigo y el LED de la placa se encienda como se asegura el codigo.</p>
 			    <figure class="mb-0" align="center"><img class="img-fluid rounded"  width="600px" src="img/arduino.png" alt="..." /></figure>                            
 
                             <p id="construccion">
