--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <h5 class="card-title mt-3 mb-1">Práctica 1: Introducción a Arduino</h5>
                                     <p class="card-text mb-0">En la práctica 1 sigiendo las actividades de thinkercad realizamos algnos ejercicios para introducirnos la herramienta que utlizaremos durante el resto del semestre.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica1/">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica 1/index">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
