--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <h5 class="card-title mt-3 mb-1">Práctica 1: Introducción a Arduino</h5>
                                     <p class="card-text mb-0">En la práctica 1 sigiendo las actividades de thinkercad realizamos algnos ejercicios para introducirnos la herramienta que utlizaremos durante el resto del semestre.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica 1/index">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica1/index">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
@@ -121,7 +121,7 @@
                                     <h5 class="card-title mt-3 mb-1">Práctica 2: Introducción a Arduino II</h5>
                                     <p class="card-text mb-0">En la Practica 2 seguimos aprendiendo el uso del Arduino Uno, la diferencia es que en esta practica es que trabajamos con valores analogicos y entradas de datos.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica2/">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica2/index">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
@@ -146,7 +146,7 @@
                                     <h5 class="card-title mt-3 mb-1">Práctica 3: Microprocesador attiny 85</h5>
                                     <p class="card-text mb-0">Introducción al uso de microprocesadores, utilizaremos el attiny85, programando el software del arduino y codificando sencillas acciones.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica3/">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica3/index">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
@@ -200,7 +200,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="assets/Omar.png" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/omar.png" alt="..." width="40px">
                                             <div class="small">
                                                 <div class="fw-bold">Omar Ramírez de la Cruz</div>
                                                 <div class="text-muted">Enero 20, 2022</div>
