--- a/practica1/index.html
+++ b/practica1/index.html
@@ -267,7 +267,7 @@
                             <p id="Conexión fisica ">
                             <h1 class="fw-bolder2 mb-4 mt-5 fs-5">Diseño fisico</h1>
                             <p class="fs-6 mb-4">Para las conexiones fisicas Conectamos una resistencia al gnd de la placa Arduino, que conectara con el Led para que de esta forma llegue las señales del parpadeo.</p>
-                            <figure class="mb-0" align="center"><img class="img-fluid rounded"  width="600px" src="img/arduinoLed.png" alt="..." /></figure>
+                            <figure class="mb-0" align="center"><img class="img-fluid rounded"  width="600px" src="img/ArduinoLed.png" alt="..." /></figure>
 
                             <p id="construccion">
                             <h1 class="fw-bolder2 mb-4 mt-5 fs-5">Construcción</h1>
