--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Microprocesadores</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Arduino</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 3: Microprocesador attiny 85</h5>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 3: Attiny85 Inputs</h5>
                                     <p class="card-text mb-0">Introducción al uso de microprocesadores, utilizaremos el attiny85, programando el software del arduino y codificando sencillas acciones.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica3/index">Leer más</a></div>
@@ -168,8 +168,8 @@
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica ?: ...</h5>
-                                    <p class="card-text mb-0">Proximamente...</p>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 4: Attiny outputs</h5>
+                                    <p class="card-text mb-0">En la practica 4 seguiremos trabajando con el attiny85 pero ahora en vez de mandar señales digitales las estaremos recibiendo.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="proximamente/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -193,8 +193,8 @@
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica ?: ...</h5>
-                                    <p class="card-text mb-0">Proximamente...</p>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 5: Sensores</h5>
+                                    <p class="card-text mb-0">Investigando sobre sensores elegiremos 2 tipos de sensores de cada tipo para lograr hacer que funcionen unsando nuestro programador attiny85.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="proximamente/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -218,8 +218,33 @@
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica ?: ...</h5>
-                                    <p class="card-text mb-0">Proximamente...</p>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Pantalla Oled</h5>
+                                    <p class="card-text mb-0">Rumbo al proyecto final haremos que una pantalla oled funcione con el attiny85 con un boton.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="proximamente/">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/omar.png" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Omar Ramírez de la Cruz</div>
+                                                <div class="text-muted">11 de noviembre, 2023</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Tarjeta Proyecto final (werable)-->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/soon.gif" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 7: Werable</h5>
+                                    <p class="card-text mb-0">La ultima practica que se realizara, en rumbo a la expoibero, se usaran 3 sensores, un buzzer, se creara un menu y todo en un objeto que es usable, mirenlo en esta presentacion no se lo pierdan.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="proximamente/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -235,6 +260,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <!--Fin de Tarjeta Práctica 1 -->
 
                         
