--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                     <h5 class="card-title mt-3 mb-1">Práctica 4: Attiny outputs</h5>
                                     <p class="card-text mb-0">En la practica 4 seguiremos trabajando con el attiny85 pero ahora en vez de mandar señales digitales las estaremos recibiendo.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="proximamente/">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="proximamente/index">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
