--- a/index.html
+++ b/index.html
@@ -261,6 +261,30 @@
                             </div>
                         </div>
 
+                        <!--Tarjeta Proximamente -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/soon.gif" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">...</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica ?: ...</h5>
+                                    <p class="card-text mb-0">El futuro es incierto...</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="proximamente/index">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/omar.png" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Omar Ramírez de la Cruz</div>
+                                                <div class="text-muted">?? de ?????? del ????</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!--Fin de Tarjeta Práctica 1 -->
 
                         
